--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "odin-twitter-clone",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://benjamin-albarzendji.github.io/odin-twitter-clone/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
@@ -24,6 +27,7 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.4"
